--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+    <meta property="og:image" content="https://b.zmtcdn.com/data/pro-referral/0e2434fd86aac8c9efe6c792d4c3858d1643395414.png">
+    </head>
 
 <body>
-
     <script src="js/index.js"></script>
 
 </body>
