--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-        <meta http-equiv="Pragma" content="no-cache">
-        <meta http-equiv="Expires" content="0">
-
-        <meta data-rh="true" property="og:image:secure_url" itemprop="image" content="https://b.zmtcdn.com/data/pro-referral/0e2434fd86aac8c9efe6c792d4c3858d1643395414.png">
+        <meta property="og:image" content="https://b.zmtcdn.com/data/pro-referral/0e2434fd86aac8c9efe6c792d4c3858d1643395414.png">
     </head>
 
 <body>
-    <script src="js/index.js"></script>
-
+Hello
 </body>
 
 </html>
