--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta property="og:image" content="https://b.zmtcdn.com/data/pro-referral/0e2434fd86aac8c9efe6c792d4c3858d1643395414.png">
+        <meta property="og:image" content="http://blog.pinak.me/assets/images/logo.png" />
     </head>
 
 <body>
