--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta property="og:image" content="http://blog.pinak.me/assets/images/logo.png" />
+        <meta property="og:title" content="How to change the address bar color in Chrome, Firefox, Opera, Safari" />
+        <meta property="og:description" content="How to change the address bar color in Chrome, Firefox, Opera, Safari" />
+        <meta property="og:url" content="http://webdevelopmentscripts.com/64-how-to-change-the-address-bar-color-in-chrome-firefox-opera-safari" />
+        <meta property="og:image" content="http://webdevelopmentscripts.com/post-images/685b-change-browser-address-bar-color-chrome-android.jpeg" />
     </head>
-
-<body>
-hello
-</body>
-
+    <body>
+        hello Mohit Goyal
+    </body>
 </html>
