--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta property="og:title" content="i" />
         <meta property="og:image" content="https://b.zmtcdn.com/data/pro-referral/0e2434fd86aac8c9efe6c792d4c3858d1643395414.png" />
+        <image src="https://b.zmtcdn.com/data/pro-referral/0e2434fd86aac8c9efe6c792d4c3858d1643395414.png" /> 
     </head>
     <body>
-        llllhello
+        ddddd
     </body>
 
 </html>
