--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta property="og:image" content="https://b.zmtcdn.com/data/pro-referral/0e2434fd86aac8c9efe6c792d4c3858d1643395414.png" />
-        <image src="https://b.zmtcdn.com/data/pro-referral/0e2434fd86aac8c9efe6c792d4c3858d1643395414.png" /> 
+        <span itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
+            <link itemprop="url" href="https://b.zmtcdn.com/data/pro-referral/0e2434fd86aac8c9efe6c792d4c3858d1643395414.png">
+            <meta itemprop="width" content="273">
+            <meta itemprop="height" content="197">
+        </span>
     </head>
     <body>
-        ddddd
+    ilkjasdf;lkjasdf;lkj
     </body>
 
 </html>
