--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<meta property="og:title" content="Here is a gift for you" />
 	<meta property="og:description" content="Get 50% OFF on Pro" />
 	<meta property="og:image"
-		content="https://b.zmtcdn.com/data/pro_referral/ae7ea723c9ef1ac120897fdc500d73bf1643707899.png" />
+		content="https://b.zmtcdn.com/data/pro-referral/ae7cf6fcc126871225ec33092136b7db1643807366.png" />
+	<script>
+		window.location.replace("https://bnc.lt/WJml/Fdl5uXIswgb?deeplink_url=zomato%3A%2F%2Fred_cart%3Fis_activation_code_applied%3D0%26requires_login%3D1%26use_payment_sdk%3D%26voucher_code%3DMOHI6444J%26plan_id%3D0%26amount%3D-1%26extra_params%3D%257B%2522campaign_id%2522%253A21%252C%2522voucher_code%2522%253A%2522MOHI6444J%2522%252C%2522should_show_choice_snippet%2522%253Afalse%257D");
+	</script>
 </head>
+
+<body>
+	<script type="text/javascript">
+		window.NREUM||(NREUM={});NREUM.info={"beacon":"bam-cell.nr-data.net","licenseKey":"700b8cfba9","applicationID":"166223965","transactionName":"blFbNhZQWkVWUxVaXFcbehcXRVtbGFMUQEdWWWYQAVVdRFJTFR1DUUQ=","queueTime":0,"applicationTime":118,"atts":"QhZMQF5KSRoVUUMJSERJ","errorBeacon":"bam-cell.nr-data.net","agent":""}
+	</script>
+</body>
+
 </html>
